tests/Project1/student_test/test_1_s12.out
Error type B at Line 3: Missing semicolon ';'
Error type A at Line 4: unknown lexeme @
