tests/Project1/student_test/test_1_s12.spl
int test_2()
{
    int a = 10
    int b = @ + 1;
    if (a > b)
    {
        a = b;
        a = a + 1;
    }
}